v2.0.0/_sources/plugins/index.rst.txt
:orphan:

.. _plugins_in_theforeman.foreman:

Theforeman.Foreman
==================

Collection version 2.0.0

.. toctree::
    :maxdepth: 1

Plugin Index
------------

These are the plugins in the theforeman.foreman collection


Callback Plugins
~~~~~~~~~~~~~~~~

* :ref:`foreman <ansible_collections.theforeman.foreman.foreman_callback>` -- Sends events to Foreman

Inventory Plugins
~~~~~~~~~~~~~~~~~

* :ref:`foreman <ansible_collections.theforeman.foreman.foreman_inventory>` -- Foreman inventory source

Modules
~~~~~~~

* :ref:`activation_key <ansible_collections.theforeman.foreman.activation_key_module>` -- Manage Activation Keys
* :ref:`architecture <ansible_collections.theforeman.foreman.architecture_module>` -- Manage Architectures
* :ref:`auth_source_ldap <ansible_collections.theforeman.foreman.auth_source_ldap_module>` -- Manage LDAP Authentication Sources
* :ref:`bookmark <ansible_collections.theforeman.foreman.bookmark_module>` -- Manage Bookmarks
* :ref:`compute_attribute <ansible_collections.theforeman.foreman.compute_attribute_module>` -- Manage Compute Attributes
* :ref:`compute_profile <ansible_collections.theforeman.foreman.compute_profile_module>` -- Manage Compute Profiles
* :ref:`compute_resource <ansible_collections.theforeman.foreman.compute_resource_module>` -- Manage Compute Resources
* :ref:`config_group <ansible_collections.theforeman.foreman.config_group_module>` -- Manage (Puppet) Config Groups
* :ref:`content_credential <ansible_collections.theforeman.foreman.content_credential_module>` -- Manage Content Credentials
* :ref:`content_upload <ansible_collections.theforeman.foreman.content_upload_module>` -- Upload content to a repository
* :ref:`content_view <ansible_collections.theforeman.foreman.content_view_module>` -- Manage Content Views
* :ref:`content_view_filter <ansible_collections.theforeman.foreman.content_view_filter_module>` -- Manage Content View Filters
* :ref:`content_view_version <ansible_collections.theforeman.foreman.content_view_version_module>` -- Manage Content View Versions
* :ref:`domain <ansible_collections.theforeman.foreman.domain_module>` -- Manage Domains
* :ref:`external_usergroup <ansible_collections.theforeman.foreman.external_usergroup_module>` -- Manage External User Groups
* :ref:`global_parameter <ansible_collections.theforeman.foreman.global_parameter_module>` -- Manage Global Parameters
* :ref:`hardware_model <ansible_collections.theforeman.foreman.hardware_model_module>` -- Manage Hardware Models
* :ref:`host <ansible_collections.theforeman.foreman.host_module>` -- Manage Hosts
* :ref:`host_collection <ansible_collections.theforeman.foreman.host_collection_module>` -- Manage Host Collections
* :ref:`host_info <ansible_collections.theforeman.foreman.host_info_module>` -- Fetch information about Hosts
* :ref:`host_power <ansible_collections.theforeman.foreman.host_power_module>` -- Manage Power State of Hosts
* :ref:`hostgroup <ansible_collections.theforeman.foreman.hostgroup_module>` -- Manage Hostgroups
* :ref:`http_proxy <ansible_collections.theforeman.foreman.http_proxy_module>` -- Manage HTTP Proxies
* :ref:`image <ansible_collections.theforeman.foreman.image_module>` -- Manage Images
* :ref:`installation_medium <ansible_collections.theforeman.foreman.installation_medium_module>` -- Manage Installation Media
* :ref:`job_invocation <ansible_collections.theforeman.foreman.job_invocation_module>` -- Invoke Remote Execution Jobs
* :ref:`job_template <ansible_collections.theforeman.foreman.job_template_module>` -- Manage Job Templates
* :ref:`lifecycle_environment <ansible_collections.theforeman.foreman.lifecycle_environment_module>` -- Manage Lifecycle Environments
* :ref:`location <ansible_collections.theforeman.foreman.location_module>` -- Manage Locations
* :ref:`operatingsystem <ansible_collections.theforeman.foreman.operatingsystem_module>` -- Manage Operating Systems
* :ref:`organization <ansible_collections.theforeman.foreman.organization_module>` -- Manage Organizations
* :ref:`os_default_template <ansible_collections.theforeman.foreman.os_default_template_module>` -- Manage Default Template Associations To Operating Systems
* :ref:`partition_table <ansible_collections.theforeman.foreman.partition_table_module>` -- Manage Partition Table Templates
* :ref:`product <ansible_collections.theforeman.foreman.product_module>` -- Manage Products
* :ref:`provisioning_template <ansible_collections.theforeman.foreman.provisioning_template_module>` -- Manage Provisioning Templates
* :ref:`puppet_environment <ansible_collections.theforeman.foreman.puppet_environment_module>` -- Manage Puppet Environments
* :ref:`puppetclasses_import <ansible_collections.theforeman.foreman.puppetclasses_import_module>` -- Import Puppet Classes from a Proxy
* :ref:`realm <ansible_collections.theforeman.foreman.realm_module>` -- Manage Realms
* :ref:`redhat_manifest <ansible_collections.theforeman.foreman.redhat_manifest_module>` -- Interact with a Red Hat Satellite Subscription Manifest
* :ref:`repository <ansible_collections.theforeman.foreman.repository_module>` -- Manage Repositories
* :ref:`repository_info <ansible_collections.theforeman.foreman.repository_info_module>` -- Fetch information about Repositories
* :ref:`repository_set <ansible_collections.theforeman.foreman.repository_set_module>` -- Enable/disable Red Hat Repositories available through subscriptions
* :ref:`repository_sync <ansible_collections.theforeman.foreman.repository_sync_module>` -- Sync a Repository or Product
* :ref:`resource_info <ansible_collections.theforeman.foreman.resource_info_module>` -- Gather information about resources
* :ref:`role <ansible_collections.theforeman.foreman.role_module>` -- Manage Roles
* :ref:`scap_content <ansible_collections.theforeman.foreman.scap_content_module>` -- Manage SCAP content
* :ref:`scap_tailoring_file <ansible_collections.theforeman.foreman.scap_tailoring_file_module>` -- Manage SCAP Tailoring Files
* :ref:`scc_account <ansible_collections.theforeman.foreman.scc_account_module>` -- Manage SUSE Customer Center Accounts
* :ref:`scc_product <ansible_collections.theforeman.foreman.scc_product_module>` -- Subscribe SUSE Customer Center Account Products
* :ref:`setting <ansible_collections.theforeman.foreman.setting_module>` -- Manage Settings
* :ref:`smart_class_parameter <ansible_collections.theforeman.foreman.smart_class_parameter_module>` -- Manage Smart Class Parameters
* :ref:`smart_proxy <ansible_collections.theforeman.foreman.smart_proxy_module>` -- Manage Smart Proxies
* :ref:`snapshot <ansible_collections.theforeman.foreman.snapshot_module>` -- Manage Snapshots
* :ref:`status_info <ansible_collections.theforeman.foreman.status_info_module>` -- Get status info
* :ref:`subnet <ansible_collections.theforeman.foreman.subnet_module>` -- Manage Subnets
* :ref:`subscription_manifest <ansible_collections.theforeman.foreman.subscription_manifest_module>` -- Manage Subscription Manifests
* :ref:`sync_plan <ansible_collections.theforeman.foreman.sync_plan_module>` -- Manage Sync Plans
* :ref:`templates_import <ansible_collections.theforeman.foreman.templates_import_module>` -- Sync Templates from a repository
* :ref:`user <ansible_collections.theforeman.foreman.user_module>` -- Manage Users
* :ref:`usergroup <ansible_collections.theforeman.foreman.usergroup_module>` -- Manage User Groups


.. seealso::

    List of :ref:`collections <list_of_collections>` with docs hosted here.